[workspace]

resolver = "2"

members = ["audiens-macro", "audiens"]

[workspace.package]
edition = "2021"
version = "0.1.0"
keywords = ["parser", "visitor", "visitor"]
categories = ["parsing", "no-std"]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
repository = "https://github.com/kildevaeld/udled-rs"
license = "MIT"
