[package]
name = "audiens-macro"

version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true

description = "Macros for audiens"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
