[package]
name = "audiens"

version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
description = "Visitor pattern"


[dependencies]
audiens-macro = { path = "../audiens-macro", version = "0.1.0" }
